[gd_scene load_steps=10 format=3 uid="uid://01q6pnnrrggs"]

[ext_resource type="Texture2D" uid="uid://bjs3bg012nujk" path="res://spacebg.png" id="1_l1fdj"]
[ext_resource type="Script" path="res://Escenas/escena_principal.gd" id="1_lgpwl"]
[ext_resource type="FontFile" uid="uid://bfc7e8im2qap8" path="res://Kenney Future.ttf" id="3_ujj8i"]
[ext_resource type="Texture2D" uid="uid://dfbts4pvhlgre" path="res://image-removebg-preview_(5)_(1)-transformed.png" id="4_kj166"]

[sub_resource type="Theme" id="Theme_3yqcp"]
default_font = ExtResource("3_ujj8i")

[sub_resource type="Theme" id="Theme_ufdps"]

[sub_resource type="Theme" id="Theme_b2op6"]

[sub_resource type="Theme" id="Theme_b0nx5"]
default_font = ExtResource("3_ujj8i")

[sub_resource type="Theme" id="Theme_e850l"]
default_font = ExtResource("3_ujj8i")

[node name="Node2D" type="Node2D"]
position = Vector2(3, -16)
script = ExtResource("1_lgpwl")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground"]
texture_filter = 1
position = Vector2(1203, 357)
scale = Vector2(3.86021, 5.17962)
texture = ExtResource("1_l1fdj")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.05

[node name="Control" type="Control" parent="."]
texture_filter = 2
layout_mode = 3
anchors_preset = 0
offset_left = 12.0
offset_top = -29.0
offset_right = 732.0
offset_bottom = 1251.0
scale = Vector2(0.952868, 1.04511)
theme = SubResource("Theme_3yqcp")

[node name="Button" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -51.5
offset_top = -15.5
offset_right = 51.5
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(3, 3.606)
theme = SubResource("Theme_ufdps")
theme_override_colors/font_disabled_color = Color(0.109709, 0.396309, 0.730787, 1)
theme_override_font_sizes/font_size = 0
text = "Iniciar juego
"
text_overrun_behavior = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 142.727
offset_top = -474.346
offset_right = 2542.73
offset_bottom = 1219.65
grow_vertical = 0
scale = Vector2(0.320534, 0.121289)
size_flags_vertical = 8

[node name="TextureRect" type="TextureRect" parent="Control/HBoxContainer"]
texture_filter = 1
layout_mode = 2
stretch_mode = 2
flip_h = true

[node name="PreguntasLabel" type="StaticBody2D" parent="Control/HBoxContainer/TextureRect"]
texture_filter = 3
texture_repeat = 1
position = Vector2(1031.34, 1688.25)
scale = Vector2(23.823, -51.1259)
collision_priority = -1.0

[node name="Label" type="Label" parent="Control/HBoxContainer/TextureRect/PreguntasLabel"]
z_index = 10
texture_filter = 2
texture_repeat = 2
offset_left = -44.529
offset_top = -7.24586
offset_right = 220.471
offset_bottom = 41.7542
rotation = 3.13728
scale = Vector2(-0.264171, 0.389907)
theme = SubResource("Theme_b2op6")
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Obten el resultado de :
"
vertical_alignment = 1

[node name="OperacionAritmetica" type="Label" parent="Control/HBoxContainer/TextureRect/PreguntasLabel"]
z_index = 10
texture_filter = 2
texture_repeat = 2
offset_left = 3.161
offset_top = -9.66067
offset_right = 268.161
offset_bottom = 39.3394
rotation = 3.13728
scale = Vector2(-0.266269, 0.317605)
theme = SubResource("Theme_b2op6")
theme_override_colors/font_color = Color(1, 1, 1, 1)
vertical_alignment = 1

[node name="Sprite2D" type="Sprite2D" parent="Control/HBoxContainer/TextureRect/PreguntasLabel"]
texture_filter = 1
texture_repeat = 1
position = Vector2(-7.55907, -18.1141)
scale = Vector2(0.0518042, -0.0163421)
texture = ExtResource("4_kj166")

[node name="StaticBody2D2" type="StaticBody2D" parent="Control/HBoxContainer/TextureRect"]
position = Vector2(180.076, -9245.77)

[node name="Sprite2D" type="Sprite2D" parent="Control/HBoxContainer/TextureRect/StaticBody2D2"]
position = Vector2(834.898, 1988.04)
scale = Vector2(0.5, 0.537738)
texture = ExtResource("4_kj166")

[node name="Label" type="Label" parent="Control/HBoxContainer/TextureRect/StaticBody2D2"]
offset_left = 553.324
offset_top = 1767.15
offset_right = 733.324
offset_bottom = 1790.15
scale = Vector2(3.48128, 7.16438)
theme = SubResource("Theme_b0nx5")
text = "Numero actual 
"

[node name="NumeroActual" type="Label" parent="Control/HBoxContainer/TextureRect/StaticBody2D2"]
offset_left = 805.431
offset_top = 1893.37
offset_right = 845.431
offset_bottom = 1916.37
scale = Vector2(6.89339, 16.1467)
theme = SubResource("Theme_e850l")
text = "
"

[node name="Timer2" type="Timer" parent="."]
wait_time = 0.05

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(56, 1174)
gizmo_extents = 0.0

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(458, 522)
scale = Vector2(112.693, -0.0416329)
zoom = Vector2(0.71, 1.34)
drag_vertical_enabled = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
